x overflow fixed, stars reduced

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -4,7 +4,8 @@
   margin: 0
   padding: 0
 html
-  overflow-x: hidden
+  overflow-x: hidden !important
+  max-width: 100vw
 body
   height: 2000px
   background: radial-gradient(circle at bottom, #1B2735 0%, #090A0F 100%)
@@ -40,11 +41,11 @@ article
   bottom: 40vh
   filter: drop-shadow(0px 0px 40px #727230)
   animation: clockWise 10s infinite linear
-@keyframes clockWise
-  from
-    transform: rotate(0deg)
-  to
-    transform: rotate(359deg)
+  @keyframes clockWise
+    from
+      transform: rotate(0deg)
+    to
+      transform: rotate(359deg)
 #luna
   width: 100vw
   position: absolute
@@ -83,7 +84,6 @@ article
 .land
   position: relative
   bottom: 0px
-  
   img
     position: absolute
   #montana
